--- a/package.json
+++ b/package.json
@@ -1,1 +1,25 @@
-
+{
+  "name": "grouk-wallet-vercel",
+  "version": "1.0.0",
+  "description": "Grouk Wallet - Secure Solana wallet for Telegram on Vercel",
+  "main": "api/index.js",
+  "scripts": {
+    "start": "node api/index.js",
+    "build": "npm run build:client",
+    "build:client": "cd client && npm install && npm run build",
+    "dev": "vercel dev",
+    "deploy": "vercel --prod"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "node-telegram-bot-api": "^0.61.0"
+  },
+  "engines": {
+    "node": "18.x"
+  },
+  "keywords": ["grouk", "wallet", "solana", "telegram", "vercel"],
+  "author": "noorkhilji519 - Grouk Wallet Team",
+  "license": "MIT"
+}
