--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,43 @@
-
+{
+  "version": 2,
+  "name": "grouk-wallet",
+  "builds": [
+    {
+      "src": "client/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
+    },
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "/static/(.*)",
+      "headers": {
+        "cache-control": "s-maxage=31536000,immutable"
+      }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/client/build/index.html"
+    }
+  ],
+  "env": {
+    "TELEGRAM_BOT_TOKEN": "8353300770:AAG_pbUOBCmZjgXvYAl-OLrCgIyfOdrXY28",
+    "WEB_APP_URL": "https://your-project.vercel.app",
+    "NODE_ENV": "production"
+  },
+  "functions": {
+    "api/index.js": {
+      "maxDuration": 30
+    }
+  }
+}
