--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "deploy": "vercel --prod"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "node-telegram-bot-api": "^0.61.0"
+  "cors": "^2.8.5",
+  "dotenv": "^16.3.1",
+  "express": "^4.18.2",
+  "node-telegram-bot-api": "^0.61.0",
+  "serverless-http": "^3.2.0"
   },
   "engines": {
     "node": "18.x"
