--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "node-telegram-bot-api": "^0.61.0",
     "serverless-http": "^3.2.0"
+    "web-vitals": "^4.2.0"
   },
   "engines": {
     "node": "22.x"
