--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "express": "^4.18.2",
     "node-telegram-bot-api": "^0.61.0",
     "serverless-http": "^3.2.0"
-    "web-vitals": "^4.2.0"
   },
   "engines": {
     "node": "22.x"
   },
-  "keywords": ["grouk", "wallet", "solana", "telegram", "vercel"],
+  "keywords": [
+    "grouk",
+    "wallet",
+    "solana",
+    "telegram",
+    "vercel"
+  ],
   "author": "noorkhilji519 - Grouk Wallet Team",
   "license": "MIT"
 }
