--- a/package.json
+++ b/package.json
@@ -1,33 +1,17 @@
 {
-  "name": "groukwalletnoor",
+  "name": "grouk-wallet-client",
   "version": "1.0.0",
-  "description": "Grouk Wallet - Secure Solana wallet for Telegram on Vercel",
   "private": true,
-  "main": "api/index.js",
   "scripts": {
-    "start": "node api/index.js",
-    "build": "npm run build:client",
-    "build:client": "cd client && npm install && npm run build",
-    "dev": "vercel dev",
-    "deploy": "vercel --prod"
+    "start": "react-scripts start",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build && echo \"Build completed for Vercel\"",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "node-telegram-bot-api": "^0.61.0",
-    "serverless-http": "^3.2.0"
-  },
-  "engines": {
-    "node": "22.x"
-  },
-  "keywords": [
-    "grouk",
-    "wallet",
-    "solana",
-    "telegram",
-    "vercel"
-  ],
-  "author": "noorkhilji519 - Grouk Wallet Team",
-  "license": "MIT"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^4.2.0"
+  }
 }
