--- a/package.json
+++ b/package.json
@@ -21,13 +21,7 @@
   "engines": {
     "node": "22.x"
   },
-  "keywords": [
-    "grouk",
-    "wallet",
-    "solana",
-    "telegram",
-    "vercel"
-  ],
+  "keywords": ["grouk", "wallet", "solana", "telegram", "vercel"],
   "author": "noorkhilji519 - Grouk Wallet Team",
   "license": "MIT"
 }
