--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,14 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@solana/web3.js": "^1.95.3",
+    "bip39": "^3.1.0",
+    "ed25519-hd-key": "^1.3.0",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "tweetnacl": "^1.0.3",
     "web-vitals": "^4.2.0"
   }
 }
