--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node api/index.js",
     "build": "npm run build:client",
-    "build:client": "cd client && npm install && npm run build",
+    "build:client": "cd client && npm install --legacy-peer-deps && npm run build",
     "dev": "vercel dev",
     "deploy": "vercel --prod"
   },
