--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@solana/web3.js": "^1.95.3",
+    "@solana/web3.js": "1.91.6",
     "bip39": "^3.1.0",
     "ed25519-hd-key": "^1.3.0",
     "qrcode": "^1.5.3",
@@ -18,5 +18,11 @@
     "react-scripts": "5.0.1",
     "tweetnacl": "^1.0.3",
     "web-vitals": "^4.2.0"
+  },
+  "devDependencies": {
+    "typescript": "4.9.5"
+  },
+  "overrides": {
+    "typescript": "4.9.5"
   }
 }
