--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,8 @@
     "typescript": "4.9.5"
   },
   "overrides": {
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "ajv": "6.12.6",
+    "ajv-keywords": "3.5.2"
   }
 }
