--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node api/index.js",
     "build": "npm run build:client",
-    "build:client": "cd client && npm install --legacy-peer-deps && npm run build",
+    "build:client": "cd client && rm -f package-lock.json && npm install --legacy-peer-deps && npm run build",
     "dev": "vercel dev",
     "deploy": "vercel --prod"
   },
@@ -19,7 +19,7 @@
     "serverless-http": "^3.2.0"
   },
   "engines": { "node": "22.x" },
-  "keywords": ["grouk","wallet","solana","telegram","vercel"],
+  "keywords": ["grouk", "wallet", "solana", "telegram", "vercel"],
   "author": "noorkhilji519 - Grouk Wallet Team",
   "license": "MIT"
 }
