--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@solana/web3.js": "1.91.6",
+    "ajv": "6.12.6",
+    "ajv-keywords": "3.5.2",
     "bip39": "^3.1.0",
     "ed25519-hd-key": "^1.3.0",
     "qrcode": "^1.5.3",
