--- a/client/package.json
+++ b/client/package.json
@@ -2,31 +2,44 @@
   "name": "grouk-wallet-client",
   "version": "1.0.0",
   "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^4.2.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "GENERATE_SOURCEMAP=false react-scripts build && echo \"Build completed for Vercel\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "dependencies": {
-    "@solana/web3.js": "1.91.6",
-    "ajv": "6.12.6",
-    "ajv-keywords": "3.5.2",
-    "bip39": "^3.1.0",
-    "ed25519-hd-key": "^1.3.0",
-    "qrcode": "^1.5.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "tweetnacl": "^1.0.3",
-    "web-vitals": "^4.2.0"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "typescript": "4.9.5"
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0"
   },
-  "overrides": {
-    "typescript": "4.9.5",
-    "ajv": "6.12.6",
-    "ajv-keywords": "3.5.2"
+  "engines": {
+    "node": ">=18"
   }
 }
