--- a/vercel.json
+++ b/vercel.json
@@ -2,30 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.js",
-      "use": "@vercel/node"
-    },
-    {
       "src": "client/package.json",
       "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
-      }
+      "config": { "distDir": "build" }
     }
   ],
-  "buildCommand": "npm install && cd client && npm install --legacy-peer-deps && npm run build",
-  "framework": null,
+  "installCommand": "cd client && npm install --legacy-peer-deps",
+  "buildCommand": "cd client && npm run build",
+  "outputDirectory": "client/build",
   "env": {
-    "BOT_TOKEN": "@bot_token",
-    "BASE_URL": "@base_url"
-  },
-  "engines": {
-    "node": "22.x"
-  },
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "client/build/$1"
-    }
-  ]
+    "NODE_ENV": "production"
+  }
 }
