--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@solana/web3.js": "^1.98.4",
+    "ajv": "8.12.0",
+    "ajv-keywords": "5.1.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "process": "^0.11.10",
@@ -19,10 +21,6 @@
     "react-scripts": "5.0.1",
     "stream-browserify": "^3.0.0",
     "web-vitals": "^4.2.0"
-  },
-  "devDependencies": {
-    "ajv": "^8.12.0",
-    "ajv-keywords": "^5.1.0"
   },
   "overrides": {
     "ajv": "8.12.0",
