--- a/package.json
+++ b/package.json
@@ -1,25 +1,40 @@
 {
-  "name": "groukwalletnoor",
+  "name": "grouk-wallet-client",
   "version": "1.0.0",
-  "description": "Grouk Wallet - Secure Solana wallet for Telegram on Vercel",
   "private": true,
-  "main": "api/index.js",
+  "description": "Grouk Wallet – React client",
   "scripts": {
-    "start": "node api/index.js",
-    "build": "npm run build:client",
-    "build:client": "cd client && rm -f package-lock.json && npm install --legacy-peer-deps && npm run build",
-    "dev": "vercel dev",
-    "deploy": "vercel --prod"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "node-telegram-bot-api": "^0.61.0",
-    "serverless-http": "^3.2.0"
+    "@solana/web3.js": "^1.98.4",
+    "ajv": "8.12.0",
+    "ajv-keywords": "5.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "3.5.2"
   },
-  "engines": { "node": "22.x" },
-  "keywords": ["grouk", "wallet", "solana", "telegram", "vercel"],
-  "author": "noorkhilji519 - Grouk Wallet Team",
-  "license": "MIT"
+  "overrides": {
+    "ajv": "8.12.0",
+    "ajv-keywords": "5.1.0"
+  },
+  "engines": {
+    "node": ">=18"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
