--- a/package.json
+++ b/package.json
@@ -1,40 +1,33 @@
 {
-  "name": "grouk-wallet-client",
+  "name": "groukwalletnoor",
   "version": "1.0.0",
+  "description": "Grouk Wallet - Solana Telegram Mini App (Vercel, monorepo: client + api)",
   "private": true,
-  "description": "Grouk Wallet – React client",
+  "main": "api/index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node api/index.js",
+    "build": "npm run build:client",
+    "build:client": "cd client && npm install --legacy-peer-deps && npm run build",
+    "dev": "vercel dev",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
-    "@solana/web3.js": "^1.98.4",
-    "ajv": "8.12.0",
-    "ajv-keywords": "5.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "3.5.2"
-  },
-  "overrides": {
-    "ajv": "8.12.0",
-    "ajv-keywords": "5.1.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "node-telegram-bot-api": "^0.61.0",
+    "serverless-http": "^3.2.0"
   },
   "engines": {
-    "node": ">=18"
+    "node": "20.x"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "keywords": [
+    "grouk",
+    "wallet",
+    "solana",
+    "telegram",
+    "vercel"
+  ],
+  "author": "noorkhilji519 - Grouk Wallet Team",
+  "license": "MIT"
 }
