--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,30 @@
 {
   "version": 2,
+  "name": "grouk-wallet",
   "builds": [
-    { "src": "client/package.json", "use": "@vercel/static-build", "config": { "distDir": "build" } }
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node",
+      "config": { "runtime": "nodejs20.x" }
+    },
+    {
+      "src": "client/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build",
+        "installCommand": "npm install --legacy-peer-deps",
+        "buildCommand": "npm run build"
+      }
+    }
   ],
-  "installCommand": "cd client && npm install --legacy-peer-deps",
-  "buildCommand": "cd client && npm run build",
-  "outputDirectory": "client/build",
+  "routes": [
+    { "src": "^/api/(.*)$", "dest": "/api/index.js" },
+    { "src": "^/(.*)$", "dest": "/client/build/$1" }
+  ],
+  "functions": {
+    "api/index.js": { "runtime": "nodejs20.x", "maxDuration": 30 }
+  },
   "env": {
-    "NODE_ENV": "production",
-    "NPM_CONFIG_PRODUCTION": "false"
+    "NODE_ENV": "production"
   }
 }
